@@ -3,6 +3,7 @@
    columns with group q-value.
  - Somatic variation output format: annotate somatic p-value column with 'p-value' group. Fix the type of the p-value
    column to be a number (was String in release 2.2).
+ - Somatic variation output format: handle unrecognized sample-ids in the parents column.
 2.2
  - Remove threshold effects when calling genotypes in several samples. Modified the filters to not remove bases in
    specific samples when the genotype survived filters in at least another sample (previous versions reported these
